Fix Syntax Errors 2 & Unit Tests