@@ -21,7 +21,7 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.net.URI;
-import java.util.Map;
+import java.util.Collections;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.CoreMatchers.containsString;
@@ -60,7 +60,7 @@ public class XsuaaJwtSignatureValidatorTest {
 		tokenKeyServiceMock = Mockito.mock(OAuth2TokenKeyService.class);
 		when(tokenKeyServiceMock
 				.retrieveTokenKeys(eq(URI.create("https://authentication.stagingaws.hanavlab.ondemand.com/token_keys")),
-						eq(Map.of(HttpHeaders.X_ZID, "uaa"))))
+						eq(Collections.singletonMap(HttpHeaders.X_ZID, "uaa"))))
 								.thenReturn(IOUtils.resourceToString("/jsonWebTokenKeys.json", UTF_8));
 
 		cut = new XsuaaJwtSignatureValidator(
